# LearningOpenAL

./: CMakeLists.txt  notes.md
scripts/: common.cmake
src/: AudioSample.cpp  AudioSample.h  AudioSystem.cpp  AudioSystem.h  helperfunctions.cpp  helperfunctions.h  main.cpp
src/Examples/: AudioExample.h  CMakeLists.txt
src/Examples/Api/: ApiExample.cpp  ApiExample.h  CMakeLists.txt
src/Examples/ApiExample/: ApiExample.cpp  ApiExample.h  CMakeLists.txt
src/Examples/PosAndVelocity/: CMakeLists.txt  PosAndVelocity.cpp  PosAndVelocity.h
src/Examples/Streaming/: CMakeLists.txt  Streaming.cpp  Streaming.h
src/Framework/: AudioExample.cpp  AudioExample.h  AudioSample.cpp  AudioSample.h  AudioSystem.cpp  AudioSystem.h  CMakeLists.txt  helperfunctions.h  includes.inl.in  main.cpp  register_examples.inl.in
